--- a/ModelProject/Components/Pages/Upload.razor
+++ b/ModelProject/Components/Pages/Upload.razor
@@ -155,7 +155,7 @@
         base.OnParametersSet();
     }
 
-    private List<string> categories = new List<string> { "Vehicles", "Sci-Fi", "Animal", "Horror", "Videogame", "Character" };
+    private List<string> categories = new List<string> { "Vehicles", "Sci-Fi", "Animal", "Horror", "Videogame", "Character", "Object" };
     private List<string> fileFormats = new() { "obj", "fbx", "stl", "gltf", "glb" };
 
     private async Task LoadFile(InputFileChangeEventArgs e)
